[package]
name = "rnetcat"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]

[[bin]]
name = "rnc"

[dependencies]
clap = "^2"
ipnetwork = "0.10.0"
#pnet = "0.12.0"
lazy_static = "^0.2"

[dependencies.pnet]
git = "https://github.com/faern/libpnet"
#branch = "checksum-improvement"
#path = "../libpnet"

[dependencies.rips]
#git = "https://github.com/faern/librips"
path = "../librips"

